fix: slider overflow

--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -557,6 +557,7 @@ header.scrolled {
 // SLIDER ~~~~~~~
 #outlet{
   position: relative;
+  overflow: hidden;
 }
 
 .slider {
